--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,15 +11,15 @@ name = "spacesurvival"
 path = "server/src/lib.rs"
 name = "spacelib"
 
-[[test]]
-path = "server/tests/lib.rs"
-name = "spacetest"
+#[[test]]
+#path = "server/tests/lib.rs"
+#name = "spacetest"
 
 [dependencies]
 uuid = { version = "0.4", features = ["use_std", "serde", "v4", "rustc-serialize"] }
 chrono = { version = "0.3", features = ["serde"] }
 argon2rs = "0.2"
-stainless = "0.1.10"
+#stainless = "0.1.10"
 rocket = { version = "0.2", features = ["testing"]}
 rocket_codegen = "0.2"
 diesel = { version = "0.11", features = ["postgres", "uuid", "chrono", "serde_json"] }
