Get research data from yaml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ r2d2 = "0.7"
 r2d2-diesel = "0.11"
 serde = "0.9"
 serde_json = "0.9"
+serde_yaml = "0.6"
 serde_derive = "0.9"
 lazy_static = "0.2"
 validator = "0.4"
