Dependency cycle check for research

--- a/server/module_data.yml
+++ b/server/module_data.yml
@@ -1,7 +1,7 @@
 Turret:
   name: "Turret"
   dependencies: 
-      - "PlasmaGenerator"
+      - "EnergyWeapons"
   level:
     - level: 1
       resources:
