--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,9 @@ validator = "0.4"
 validator_derive = "0.4"
 jsonwebtoken = "1.1"
 rustc-serialize = "0.3"
+petgraph = "0.4.4"
+
+[dev-dependencies]
 cargo-update = "0.8"
 
 [dependencies.rocket_contrib]
