Fix module model, additional module db check, new module route

--- a/server/module_data.yml
+++ b/server/module_data.yml
@@ -2,7 +2,7 @@ LaserTurret:
   name: "Laser turret"
   dependencies: 
       - "EnergyWeapons"
-  level:
+  levels:
     - level: 1
       resources:
           - ["Iron", 200]
@@ -17,7 +17,7 @@ PlasmaGenerator:
   name: "Plasma Generator"
   dependencies: 
       - "EnergyWeapons"
-  level:
+  levels:
     - level: 1
       resources:
           - ["Iron", 200]
