--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,8 @@ name = "spacelib"
 uuid = { version = "0.5", features = ["use_std", "serde", "v4"] }
 chrono = { version = "0.4", features = ["serde"] }
 argon2rs = "0.2"
-rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
-rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket.git" }
-#rocket = { version = "0.3", features = ["testing"]}
-#rocket_codegen = "0.3"
+rocket = { version = "0.3"}
+rocket_codegen = "0.3"
 diesel = { version = "0.14", features = ["postgres", "uuid", "chrono", "serde_json"] }
 diesel_codegen = { version = "0.14", features = ["postgres"] }
 r2d2 = "0.7"
@@ -38,7 +36,7 @@ stainless = "0.1"
 parking_lot = {version = "0.4", features = ["nightly"]}
 
 [dependencies.rocket_contrib]
-#version = "0.3"
+version = "0.3"
 git = "https://github.com/SergioBenitez/Rocket.git"
 default-features = false
 features = ["json"]
