--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,5 +37,6 @@ parking_lot = {version = "0.4", features = ["nightly"]}
 
 [dependencies.rocket_contrib]
 version = "0.3"
+git = "https://github.com/SergioBenitez/Rocket.git"
 default-features = false
 features = ["json"]
