--- a/server/research_data.yml
+++ b/server/research_data.yml
@@ -4,15 +4,15 @@ Plasma:
     - level: 1
       time: 5
       resources:
-        - ["Water", 200]
+        - ["Fuel", 200]
     - level: 2
       time: 10
       resources:
-        - ["Water", 200]
+        - ["Fuel", 200]
     - level: 3
       time: 15
       resources:
-        - ["Water", 200]
+        - ["Fuel", 200]
 
 
 EnergyWeapons:
@@ -23,15 +23,15 @@ EnergyWeapons:
     - level: 1
       time: 30
       resources:
-        - ["Iron", 200]
+        - ["Minerals", 200]
     - level: 2
       time: 60
       resources:
-        - ["Iron", 200]
+        - ["Minerals", 200]
     - level: 3
       time: 120
       resources:
-        - ["Iron", 200]
+        - ["Minerals", 200]
 
 MiningEfficiency:
   display_name: "Mining Efficiency"
@@ -41,12 +41,12 @@ MiningEfficiency:
     - level: 1
       time: 30
       resources:
-        - ["Iron", 200]
+        - ["Minerals", 200]
     - level: 2
       time: 60
       resources:
-        - ["Iron", 200]
+        - ["Minerals", 200]
     - level: 3
       time: 120
       resources:
-        - ["Iron", 200]
+        - ["Minerals", 200]
